# MidiEditor

./: .cproject  .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  MidiEditor.pro  MidiEditor.windows_pro  README  README.md  appveyor.yml  buildx64.bat  buildx86.bat  doxygen  midieditor.rc  ressources.cmake  ressources.qrc  version.cmake.in  version.h.in
graphics/tool/: select_box.xcf
midieditor/assistant/: midieditor-collection.qhc  midieditor-manual.qch
midieditor/graphics/tool/: Unbenannt.xcf  select_left.xcf
run_environment/: midieditor.icns
run_environment/assistant/: midieditor-manual.qch
run_environment/graphics/tool/: select.xcf  select_right.xcf
script/: abreheret_buildx64.bat  buildx64.bat  buildx86.bat
scripts_to_build/: build_linux_gcc_x64.sh  build_vc12_x64.bat  build_vc12_x64_abreheret.bat  build_vc12_x86_abreheret.bat  make_installer_linux_64.bat  make_installer_linux_64.sh  make_installer_win32_abreheret.bat  make_installer_win64.bat  make_installer_win64_abreheret.bat  make_vc14_abreheret.bat  make_vc15_abreheret.bat
scripts_to_build_vc2013/: abreheret_installerx64.bat  abreheret_installerx86.bat  installerx64.bat  installerx86.bat
src/: Singleton.h  Terminal.cpp  Terminal.h  UpdateManager.cpp  UpdateManager.h  call_once.h  main.cpp
src/MidiEvent/: ChannelPressureEvent.cpp  ChannelPressureEvent.h  ControlChangeEvent.cpp  ControlChangeEvent.h  KeyPressureEvent.cpp  KeyPressureEvent.h  KeySignatureEvent.cpp  KeySignatureEvent.h  MidiEvent.cpp  MidiEvent.h  NoteOnEvent.cpp  NoteOnEvent.h  OffEvent.cpp  OffEvent.h  OnEvent.cpp  OnEvent.h  PitchBendEvent.cpp  PitchBendEvent.h  ProgChangeEvent.cpp  ProgChangeEvent.h  SysExEvent.cpp  SysExEvent.h  TempoChangeEvent.cpp  TempoChangeEvent.h  TextEvent.cpp  TextEvent.h  TimeSignatureEvent.cpp  TimeSignatureEvent.h  UnknownEvent.cpp  UnknownEvent.h
src/gui/: AboutDialog.cpp  AdditionalMidiSettingsWidget.cpp  AdditionalMidiSettingsWidget.h  ChannelListWidget.cpp  ChannelListWidget.h  ClickButton.cpp  ClickButton.h  DataEditor.cpp  DataEditor.h  DonateDialog.cpp  EventListWidget.h  EventWidget.cpp  EventWidget.h  FileLengthDialog.cpp  FileLengthDialog.h  GraphicObject.cpp  GraphicObject.h  GuiSettingsWidget.cpp  GuiSettingsWidget.h  InstrumentChooser.cpp  InstrumentChooser.h  MainWindow.cpp  MainWindow.h  MatrixWidget.cpp  MatrixWidget.h  MidiSettingsDialog.cpp  MidiSettingsDialog.h  MidiSettingsWidget.cpp  MidiSettingsWidget.h  MiscWidget.cpp  MiscWidget.h  NToleQuantizationDialog.cpp  PaintWidget.cpp  PaintWidget.h  PianoWidget.cpp  PianoWidget.h  ProtocolWidget.cpp  RecordDialog.cpp  RecordDialog.h  RemoteSettingsWidget.h  (+11 more)
src/midi/: Metronome.cpp  Metronome.h  MidiChannel.cpp  MidiChannel.h  MidiFile.cpp  MidiFile.h  MidiInput.cpp  MidiInput.h  MidiOutput.cpp  MidiOutput.h  MidiPlayer.cpp  MidiPlayer.h  MidiTrack.cpp  MidiTrack.h  PlayerThread.cpp  PlayerThread.h  SenderThread.cpp  SenderThread.h  SingleNotePlayer.cpp  SingleNotePlayer.h
src/midi/rtmidi/: RtMidi.cpp  RtMidi.h
src/protocol/: Protocol.cpp  Protocol.h  ProtocolEntry.cpp  ProtocolEntry.h  ProtocolItem.cpp  ProtocolStep.cpp  ProtocolStep.h
src/remote/: RemoteServer.cpp  RemoteServer.h
src/tool/: EditorTool.cpp  EditorTool.h  EraserTool.cpp  EraserTool.h  EventMoveTool.cpp  EventMoveTool.h  EventTool.cpp  EventTool.h  NewNoteTool.cpp  NewNoteTool.h  SelectTool.cpp  SelectTool.h  Selection.cpp  Selection.h  SizeChangeTool.cpp  SizeChangeTool.h  StandardTool.cpp  StandardTool.h  Tool.cpp  Tool.h
trunk/: .project  Makefile  Makefile.Debug  Makefile.Release  MidiEditor.pro  MidiEditor.windows_pro  midieditor-collection.qhc
trunk/graphics/tool/: move_left_right.xcf  newnote.xcf
trunk/midieditor/graphics/tool/: move_up_down.xcf  move_up_down_left_right.xcf
trunk/run_environment/: version_info.xml
trunk/run_environment/assistant/: midieditor-collection.qhc
trunk/src/: Terminal.cpp  UpdateManager.h  main.cpp
trunk/src/MidiEvent/: ChannelPressureEvent.cpp  ChannelPressureEvent.h  ControlChangeEvent.cpp  ControlChangeEvent.h  KeyPressureEvent.cpp  KeySignatureEvent.cpp  KeySignatureEvent.h  MidiEvent.cpp  MidiEvent.h  NoteOnEvent.cpp  NoteOnEvent.h  OffEvent.cpp  OffEvent.h  OnEvent.cpp  OnEvent.h  PitchBendEvent.cpp  PitchBendEvent.h  ProgChangeEvent.cpp  ProgChangeEvent.h  SysExEvent.cpp  SysExEvent.h  TempoChangeEvent.cpp  TempoChangeEvent.h  TextEvent.cpp  TextEvent.h  TimeSignatureEvent.cpp  TimeSignatureEvent.h  UnknownEvent.cpp  UnknownEvent.h
trunk/src/gui/: AboutDialog.cpp  AboutDialog.h  ChannelListWidget.cpp  ChannelListWidget.h  ClickButton.cpp  ClickButton.h  DonateDialog.cpp  DonateDialog.h  EventListWidget.cpp  EventWidget.cpp  EventWidget.h  FileLengthDialog.cpp  FileLengthDialog.h  GraphicObject.h  InstrumentChooser.cpp  MainWindow.cpp  MainWindow.h  MatrixWidget.cpp  MatrixWidget.h  MidiSettingsDialog.cpp  MidiSettingsWidget.cpp  MidiSettingsWidget.h  MiscWidget.cpp  NToleQuantizationDialog.cpp  PaintWidget.h  PlayControlWidget.cpp  PlayControlWidget.h  ProtocolWidget.cpp  ProtocolWidget.h  RecordDialog.cpp  RecordDialog.h  RemoteDialog.cpp  RemoteDialog.h  SettingsDialog.cpp  TrackListWidget.cpp  TrackListWidget.h  TransposeDialog.cpp  VelocityWidget.cpp
trunk/src/midi/: MidiChannel.cpp  MidiChannel.h  MidiFile.cpp  MidiFile.h  MidiInput.cpp  MidiOutput.cpp  MidiOutput.h  MidiPlayer.cpp  MidiPlayer.h  MidiTrack.cpp  MidiTrack.h  PlayerThread.cpp  PlayerThread.h  SenderThread.h  SingleNotePlayer.cpp
trunk/src/midi/rtmidi/: RtMidi.h
trunk/src/protocol/: Protocol.cpp  Protocol.h  ProtocolEntry.h
trunk/src/tool/: EditorTool.cpp  EditorTool.h  EraserTool.cpp  EraserTool.h  EventMoveTool.cpp  EventMoveTool.h  EventTool.cpp  EventTool.h  NewNoteTool.cpp  NewNoteTool.h  SelectTool.cpp  SelectTool.h  SizeChangeTool.cpp  SizeChangeTool.h  StandardTool.cpp  StandardTool.h  Tool.cpp  ToolButton.cpp  ToolButton.h
